Fixed comment wrapping

--- a/docs/example-blog-post/stylesheet.css
+++ b/docs/example-blog-post/stylesheet.css
@@ -80,6 +80,14 @@ form > button {
     box-shadow: 0 0 5px 2px #cccccc;
 }
 
+small {
+    display: block;
+
+    margin: 10px 0 0 0;
+
+    color: #666666;
+}
+
 .comment {
     padding: 10px;
 
@@ -90,8 +98,6 @@ form > button {
     background: #eeeeee;
 
     font-size: 16px;
-
-    white-space: pre-line;
 }
 
 .comment + .comment {
@@ -102,6 +108,9 @@ form > button {
     margin: 0;
 
     font-size: 16px;
+
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
 }
 
 .faded {
